9/24/2015
General
- `mercenary_starter_gear` column structure has changed
- New table `mercenary_world`
- New `creature_template` and `script_binding` (Mangos Only) table data
- You can now spawn creatures as Mercenaries. `mercenary_world` table holds Mercenary creation data. You can add gear for the Mercenary in `mercenary_starter_gear` using its entryId and that gear will be used by the Mercenary once hired

Fixes
- Fixed Mercenary role on creation not being correct sometimes or not at all
- Fixed ownerGUID being 0 if it wasn't set prior to the real `Create` method

9/22/2015
General
- Added new column to mercenary_spell table `isDefaultAura`, also updated the columns with appropriate default values
- Added new spells for warrior Mercenary in mercenary_spells table
- Updated warrior Mercenary sayings in mercenary_talk table with real (non-test) sayings
- isDefaultAura is used to allow certain default auras on your Mercenary when they first spawn or update. For example, if a warrior Mercenary had Charge spell but needed Battle Stance, you could add Battle Stance in mercenary_spells table with isDefaultAura value as 1
- You no longer have to relog after changing your Mercenary's name
- Mercenaries name variable will go through 'escape string' method before saving
- Mercenaries data will now save
- Removed PetLevelInfo check

Fixes
- Fixed Mercenary not returning to you after they leave combat [Mangos Only]
- Fixed Mercenaries stats not updating after equipping an item on them

9/21/2015
General
- Added real MaNGOS (mangostwo) 3.3.5 TrinityCore 3.3.5 diffs of this system
- Added 'GetAIName()' to MercenaryMgr and updated all core modifications with the said method when checking 'GetScriptName()'
- Removed docs since I didn't expect them to be at all good to implement this system