@@ -495,17 +495,16 @@ bool Mercenary::CanEquipItem(Player* player, Item* item)
         }
     }
 
+    uint32 oldItemId = 0;
     for (auto itr = GearContainer.begin(); itr != GearContainer.end(); ++itr)
     {
-        if (itemClass == ITEM_CLASS_ARMOR)
+        if (itemClass == ITEM_CLASS_ARMOR || itemClass == ITEM_CLASS_WEAPON)
         {
             if (itr->slot == editSlot)
+            {
+                oldItemId = itr->itemId;
                 itr->itemId = item->GetEntry();
-        }
-        else if (itemClass == ITEM_CLASS_WEAPON)
-        {
-            if (itr->slot == editSlot)
-                itr->itemId = item->GetEntry();
+            }
 
             if (itr->slot == editSlot && editSlot == SLOT_MAIN_HAND)
                 pet->SetUInt32Value(UNIT_VIRTUAL_ITEM_SLOT_ID, itr->itemId);
@@ -515,6 +514,30 @@ bool Mercenary::CanEquipItem(Player* player, Item* item)
                 pet->SetUInt32Value(UNIT_VIRTUAL_ITEM_SLOT_ID + 2, itr->itemId);
         }
     }
+
+    if (player->HasItemCount(item->GetEntry(), 1))
+        player->DestroyItemCount(item->GetEntry(), 1, true);
+
+	// Destroy item from inventory and add the old one back (if exists)
+	if (oldItemId > 0)
+	{
+#ifdef MANGOS
+        ItemPosCountVec dest;
+        InventoryResult msg = player->CanStoreNewItem(NULL_BAG, NULL_SLOT, dest, oldItemId, 1);
+        if (msg != EQUIP_ERR_OK || dest.empty())
+        {
+            player->SendEquipError(msg, NULL, NULL, oldItemId);
+            return false;
+        }
+
+        Item* newitem = player->StoreNewItem(dest, oldItemId, true);
+        if (newitem)
+            player->SendNewItem(newitem, 1, true, false);
+#else
+        if (!player->AddItem(oldItemId, 1))
+            return false;
+#endif
+	}
 
     if (editSlot != SLOT_MAIN_HAND || editSlot != SLOT_OFF_HAND || editSlot != SLOT_RANGED)
         SendMirrorImagePacket(pet);
@@ -952,122 +975,4 @@ uint8 Mercenary::GetInvTypeSlot(uint8 characterSlot) const
         INVTYPE_RANGED
     };
     return invSlots[characterSlot];
-}
-
-std::string Mercenary::GetSpellIcon(uint32 entry, WorldSession* session) const
-{
-    std::ostringstream ss;
-    ss << "|T";
-#ifndef MANGOS
-    const SpellInfo* temp = sSpellMgr->GetSpellInfo(entry);
-#else
-    const SpellEntry* temp = sSpellStore.LookupEntry(entry);
-#endif
-    const SpellIconEntry* icon = nullptr;
-    std::string name = "";
-    if (temp)
-    {
-        name = temp->SpellName[session->GetSessionDbcLocale()];
-        icon = sSpellIconStore.LookupEntry(temp->SpellIconID);
-        if (icon)
-            ss << icon->spellIcon;
-    }
-    if (!icon)
-        ss << "Interface/ICONS/InventoryItems/WoWUnknownItem01";
-    ss << ":" << 32 << ":" << 32 << ":" << -18 << ":" << 0 << "|t" << name;
-    return ss.str();
-}
-
-std::string Mercenary::GetItemIcon(uint32 entry) const
-{
-    std::ostringstream ss;
-    ss << "|TInterface";
-#ifndef MANGOS
-    const ItemTemplate* temp = sObjectMgr->GetItemTemplate(entry);
-#else
-    const ItemPrototype* temp = sObjectMgr.GetItemPrototype(entry);
-#endif
-    const ItemDisplayInfoEntry* dispInfo = nullptr;
-    if (temp)
-    {
-        dispInfo = sItemDisplayInfoStore.LookupEntry(temp->DisplayInfoID);
-        if (dispInfo)
-            ss << "/ICONS/" << dispInfo->inventoryIcon;
-    }
-    if (!dispInfo)
-        ss << "/InventoryItems/WoWUnknownItem01";
-    ss << ":" << 32 << ":" << 32 << ":" << -18 << ":" << 0 << "|t";
-    return ss.str();
-}
-
-std::string Mercenary::GetSlotIcon(uint8 slot) const
-{
-    std::ostringstream ss;
-    ss << "|TInterface/PaperDoll/";
-    switch (slot)
-    {
-        case SLOT_HEAD: ss << "UI-PaperDoll-Slot-Head"; break;
-        case SLOT_SHOULDERS: ss << "UI-PaperDoll-Slot-Shoulder"; break;
-        case SLOT_SHIRT: ss << "UI-PaperDoll-Slot-Shirt"; break;
-        case SLOT_CHEST: ss << "UI-PaperDoll-Slot-Chest"; break;
-        case SLOT_WAIST: ss << "UI-PaperDoll-Slot-Waist"; break;
-        case SLOT_LEGS: ss << "UI-PaperDoll-Slot-Legs"; break;
-        case SLOT_FEET: ss << "UI-PaperDoll-Slot-Feet"; break;
-        case SLOT_WRISTS: ss << "UI-PaperDoll-Slot-Wrists"; break;
-        case SLOT_HANDS: ss << "UI-PaperDoll-Slot-Hands"; break;
-        case SLOT_BACK: ss << "UI-PaperDoll-Slot-Chest"; break;
-        case SLOT_MAIN_HAND: ss << "UI-PaperDoll-Slot-MainHand"; break;
-        case SLOT_OFF_HAND: ss << "UI-PaperDoll-Slot-SecondaryHand"; break;
-        case SLOT_RANGED: ss << "UI-PaperDoll-Slot-Ranged"; break;
-        case SLOT_TABARD: ss << "UI-PaperDoll-Slot-Tabard"; break;
-       default: ss << "UI-Backpack-EmptySlot";
-    }
-    ss << ":" << 32 << ":" << 32 << ":" << -18 << ":" << 0 << "|t";
-    return ss.str();
-}
-
-const char* Mercenary::GetSlotName(uint8 slot) const
-{
-    switch (slot)
-    {
-        case SLOT_HEAD: return  "Head";
-        case SLOT_SHOULDERS: return  "Shoulders";
-        case SLOT_SHIRT: return  "Shirt";
-        case SLOT_CHEST: return  "Chest";
-        case SLOT_WAIST: return  "Waist";
-        case SLOT_LEGS: return  "Legs";
-        case SLOT_FEET: return  "Feet";
-        case SLOT_WRISTS: return  "Wrists";
-        case SLOT_HANDS: return  "Hands";
-        case SLOT_BACK: return  "Back";
-        case SLOT_MAIN_HAND: return  "Main hand";
-        case SLOT_OFF_HAND: return  "Off hand";
-        case SLOT_RANGED: return  "Ranged";
-        case SLOT_TABARD: return  "Tabard";
-        default: return "";
-    }
-}
-
-std::string Mercenary::GetItemLink(uint32 entry, WorldSession* session) const
-{
-#ifndef MANGOS
-    const ItemTemplate* temp = sObjectMgr->GetItemTemplate(entry);
-#else
-    const ItemPrototype* temp = sObjectMgr.GetItemPrototype(entry);
-#endif
-    int loc_idx = session->GetSessionDbLocaleIndex();
-    std::string name = temp->Name1;
-#ifndef MANGOS
-    if (ItemLocale const* il = sObjectMgr->GetItemLocale(entry))
-        ObjectMgr::GetLocaleString(il->Name, loc_idx, name);
-#else
-    if (ItemLocale const* il = sObjectMgr.GetItemLocale(entry))
-        ObjectMgr::GetLocaleString(il->Name, loc_idx, name);
-#endif
-
-    std::ostringstream oss;
-    oss << "|c" << std::hex << ItemQualityColors[temp->Quality] << std::dec <<
-        "|Hitem:" << entry << ":0:0:0:0:0:0:0:0:0|h[" << name << "]|h|r";
-
-    return oss.str();
 }
